--- a/vcf_testing.ipynb
+++ b/vcf_testing.ipynb
@@ -2,32 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23:01:43 - INFO - Using COSMIC email from COSMIC_EMAIL environment variable: jmrich@caltech.edu\n",
-      "23:01:43 - INFO - Using COSMIC password from COSMIC_PASSWORD environment variable\n",
-      "23:01:45 - INFO - Successfully verified COSMIC credentials.\n",
-      "23:01:45 - WARNING - According to COSMIC regulations, please do not share any data that utilizes the COSMIC database. See more here: https://cancer.sanger.ac.uk/cosmic/help/terms\n",
-      "23:01:45 - INFO - Downloading reference files with variants=cosmic_cmc, sequences=cdna\n"
+      "23:05:41 - INFO - Using COSMIC email from COSMIC_EMAIL environment variable: jmrich@caltech.edu\n",
+      "23:05:41 - INFO - Using COSMIC password from COSMIC_PASSWORD environment variable\n",
+      "23:05:44 - INFO - Successfully verified COSMIC credentials.\n",
+      "23:05:44 - WARNING - According to COSMIC regulations, please do not share any data that utilizes the COSMIC database. See more here: https://cancer.sanger.ac.uk/cosmic/help/terms\n",
+      "23:05:44 - INFO - Downloading reference files with variants=cosmic_cmc, sequences=cdna\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mvarseek\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mvk\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mvk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mref\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mvariants\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcosmic_cmc\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43msequences\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcdna\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtrash_temp2/vk_ref_files\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mw\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m47\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mk\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m51\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdlist_reference_source\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgrch37\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdlist_reference_ensembl_release\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m93\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdownload\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/local/varseek/varseek/varseek_ref.py:430\u001b[0m, in \u001b[0;36mref\u001b[0;34m(sequences, variants, w, k, filters, dlist, dlist_reference_source, var_column, seq_id_column, var_id_column, out, reference_out_dir, index_out, t2g_out, download, dry_run, list_downloadable_references, minimum_info_columns, overwrite, threads, logging_level, save_logs, log_out_dir, verbose, **kwargs)\u001b[0m\n\u001b[1;32m    428\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to verify COSMIC credentials. Status code: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse\u001b[38;5;241m.\u001b[39mstatus_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    429\u001b[0m logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDownloading reference files with variants=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvariants\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, sequences=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msequences\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 430\u001b[0m vk_ref_output_dict \u001b[38;5;241m=\u001b[39m \u001b[43mdownload_varseek_files\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    431\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m index_out \u001b[38;5;129;01mand\u001b[39;00m vk_ref_output_dict[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m!=\u001b[39m index_out:\n\u001b[1;32m    432\u001b[0m     os\u001b[38;5;241m.\u001b[39mrename(vk_ref_output_dict[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m], index_out)\n",
-      "File \u001b[0;32m~/Desktop/local/varseek/varseek/utils/logger_utils.py:328\u001b[0m, in \u001b[0;36mdownload_varseek_files\u001b[0;34m(urls_dict, out)\u001b[0m\n\u001b[1;32m    324\u001b[0m             file\u001b[38;5;241m.\u001b[39mwrite(chunk)\n\u001b[1;32m    326\u001b[0m     filetype_to_filename_dict[filetype] \u001b[38;5;241m=\u001b[39m output_file_path\n\u001b[0;32m--> 328\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile downloaded successfully as \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_file_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    329\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    330\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to download file. Status code: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse\u001b[38;5;241m.\u001b[39mstatus_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File downloaded successfully as 'trash_temp5/vk_ref_files/vcrs_index.idx'\n",
+      "File downloaded successfully as 'trash_temp5/vk_ref_files/vcrs_t2g.txt'\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'index': 'trash_temp5/vk_ref_files/vcrs_index.idx',\n",
+       " 't2g': 'trash_temp5/vk_ref_files/vcrs_t2g.txt'}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -36,7 +42,7 @@
     "vk.ref(\n",
     "    variants=\"cosmic_cmc\",\n",
     "    sequences=\"cdna\",\n",
-    "    out=\"trash_temp3/vk_ref_files\",\n",
+    "    out=\"trash_temp5/vk_ref_files\",\n",
     "    w=47,\n",
     "    k=51,\n",
     "    dlist_reference_source=\"grch37\",\n",
