improved documentation for sequences and variants; modified vk info so that it won't crash for the bowtie checking if only cdna or only genome is provided

--- a/vcf_testing.ipynb
+++ b/vcf_testing.ipynb
@@ -2,6 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns_that_require_dlist_genome = (\"alignment_to_reference\", \"alignment_to_reference_genome\", \"alignment_to_reference_count_total\", \"alignment_to_reference_count_genome\", \"substring_alignment_to_reference\", \"substring_alignment_to_reference_genome\", \"substring_alignment_to_reference_count_total\", \"substring_alignment_to_reference_count_genome\")\n",
+    "params_dict = {\"columns_to_include\": (\"xxx\", \"extra\")}\n",
+    "print(any(column in params_dict.get(\"columns_to_include\") for column in columns_that_require_dlist_genome) and not params_dict.get(\"dlist_reference_genome_fasta\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alignment_to_reference', 'substring_alignment_to_reference_count_genome']\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns_to_include = (\"alignment_to_reference\", \"extra\", \"substring_alignment_to_reference_count_genome\") \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
