ensure that vcrs_id column is added for vk sim

--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -299,6 +299,26 @@
     "    w=11\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"ENST00000397121:c.1099_1100insCTTTCAACTCGTCC\")"
+   ]
   }
  ],
  "metadata": {
