--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 2\n",
+      "2 3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, item in enumerate([1, 2, 3]):\n",
+    "    print(i, item)\n",
+    "print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
