chunking for info and filter; build chunking now works on vcf

--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -2,24 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1\n",
-      "1 2\n",
-      "2 3\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i, item in enumerate([1, 2, 3]):\n",
-    "    print(i, item)\n",
-    "print(item)"
+    "import pandas as pd\n",
+    "first_chunk = True  # To ensure header is only written once\n",
+    "for chunk in pd.read_csv(\"/Users/joeyrich/Desktop/local/varseek/trash/testing.csv\", chunksize=1):\n",
+    "    chunk.to_csv(\"/Users/joeyrich/Desktop/local/varseek/trash/testing2.csv\", mode=\"w\" if first_chunk else \"a\", index=False, header=first_chunk)\n",
+    "    first_chunk = False  # Ensure header is only written once"
    ]
   },
   {
